diesel_infer_query/tests/snapshots/integration_tests__parsing__unnamed_query_source.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: SELECT * FROM (SELECT 1 as dummy)
---
ViewData {
    fields: [
        SelectField {
            ident: None,
            kind: Wildcard {
                schema: None,
                relation: None,
                is_left_joined: false,
                source_id: Some(
                    0,
                ),
            },
        },
    ],
    subqueries: [
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "dummy",
                    ),
                    kind: Literal {
                        value: None,
                        is_null: false,
                    },
                },
            ],
        },
    ],
}
