diesel_infer_query/tests/snapshots/integration_tests__parsing__with_multi_level_cte.snap
---
source: diesel_infer_query/tests/parsing.rs
expression: res
info: "CREATE VIEW test AS WITH source AS (SELECT a, b FROM table1 WHERE c > 1), intermediate AS (SELECT a + b AS one, a, b, count(*) as c FROM source) SELECT t1.col1, s.a, s.b, count(*), s.one, s.c FROM users t1 INNER JOIN intermediate s ON t1.id = s.a GROUP BY t1.col1, s.b"
---
ViewData {
    fields: [
        SelectField {
            ident: Some(
                "col1",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "users",
                ),
                source_id: None,
                field_name: "col1",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "a",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "intermediate",
                ),
                source_id: Some(
                    1,
                ),
                field_name: "a",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "b",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "intermediate",
                ),
                source_id: Some(
                    1,
                ),
                field_name: "b",
                via_left_join: false,
            },
        },
        SelectField {
            ident: None,
            kind: Function {
                name: "count",
                schema: None,
                arguments: [
                    Unknown,
                ],
            },
        },
        SelectField {
            ident: Some(
                "one",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "intermediate",
                ),
                source_id: Some(
                    1,
                ),
                field_name: "one",
                via_left_join: false,
            },
        },
        SelectField {
            ident: Some(
                "c",
            ),
            kind: Field {
                schema: None,
                query_source: Some(
                    "intermediate",
                ),
                source_id: Some(
                    1,
                ),
                field_name: "c",
                via_left_join: false,
            },
        },
    ],
    subqueries: [
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "table1",
                        ),
                        source_id: None,
                        field_name: "a",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "table1",
                        ),
                        source_id: None,
                        field_name: "b",
                        via_left_join: false,
                    },
                },
            ],
        },
        SubQuery {
            fields: [
                SelectField {
                    ident: Some(
                        "one",
                    ),
                    kind: BinaryOp {
                        left: Field {
                            schema: None,
                            query_source: Some(
                                "source",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "a",
                            via_left_join: false,
                        },
                        right: Field {
                            schema: None,
                            query_source: Some(
                                "source",
                            ),
                            source_id: Some(
                                0,
                            ),
                            field_name: "b",
                            via_left_join: false,
                        },
                        op: "+",
                        statically_not_null: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "a",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "source",
                        ),
                        source_id: Some(
                            0,
                        ),
                        field_name: "a",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "b",
                    ),
                    kind: Field {
                        schema: None,
                        query_source: Some(
                            "source",
                        ),
                        source_id: Some(
                            0,
                        ),
                        field_name: "b",
                        via_left_join: false,
                    },
                },
                SelectField {
                    ident: Some(
                        "c",
                    ),
                    kind: Function {
                        name: "count",
                        schema: None,
                        arguments: [
                            Wildcard {
                                schema: None,
                                relation: Some(
                                    "source",
                                ),
                                is_left_joined: false,
                                source_id: Some(
                                    0,
                                ),
                            },
                        ],
                    },
                },
            ],
        },
    ],
}
